--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         margin-top: 10pt;
         max-width: 100%;
         height: auto;
-        box-align: center; 
       }
       body {
         margin: 0;
@@ -214,7 +213,7 @@
  
 
   <div class="title">
-    <img src="titlecard-removebg-preview.png" alt="Title Card Paws & Play">
+    <img src="titlecard-removebg-preview.png" alt="Paws & Play brand name with 3 paw prints on each side on the title.">
    
   </div>
 
@@ -302,10 +301,8 @@ play and socialize all day!  </p>
     
   </div>
     <div class="button3-container">
-    <div class="button3-container">
     <a href="https://netnet.studio/?gh=AndreaSobiesiak/Book-Now" class="book-now-button">Book Now</a>
 <br> 
-      </div>
   </div>
  
  <div class="horizontal-line"></div>
@@ -343,9 +340,7 @@ Alternately you can etransfer upon drop off to
   <div class="horizontal-line"></div>
  
    <div class="button4-container">
-    <div class="button4-container4">
-    <a href="https://netnet.studio/?gh=AndreaSobiesiak/Book-Now" class="book-now-button">Look Book</a>
-</div>
+    <a href="https://netnet.studio/?gh=AndreaSobiesiak/Practice" class="book-now-button">Look Book</a>
   </div>
 
   <img src="footer3.jpg" alt="Footer with phone number, address, socials, and email.">
