--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
   <nav>
     <a href="https://andreasobiesiak.github.io/Practice/">Home</a>
     <a href="https://netnet.studio/?gh=AndreaSobiesiak/About-Us">Services</a>
-    <a href="https://netnet.studio/?gh=AndreaSobiesiak/Practice">Lookbook</a>
-    <a href="https://netnet.studio/?gh=AndreaSobiesiak/Book-Now">Book Now</a> 
+    <a href="https://andreasobiesiak.github.io/Look-Book/">Lookbook</a>
+    <a href="https://andreasobiesiak.github.io/Book-Now/">Book Now</a> 
   </nav>
   
  
@@ -244,7 +244,7 @@ Daycare must be booked in advance, there are no drop-ins allowed.
   </div>
     <div class="button-container">
     <div class="button-container">
-    <a href="https://netnet.studio/?gh=AndreaSobiesiak/Book-Now" class="book-now-button">Book Now</a>
+    <a href="https://andreasobiesiak.github.io/Book-Now/" class="book-now-button">Book Now</a>
 </div>
   </div>
  
@@ -272,7 +272,7 @@ times, <br> whatever works for you! <br></p>
   </div>
     <div class="button2-container">
     <div class="button2-container">
-    <a href="https://netnet.studio/?gh=AndreaSobiesiak/Book-Now" class="book-now-button">Book Now</a>
+    <a href="https://andreasobiesiak.github.io/Book-Now/" class="book-now-button">Book Now</a>
 </div>
   </div>
   
@@ -301,7 +301,7 @@ play and socialize all day!  </p>
     
   </div>
     <div class="button3-container">
-    <a href="https://netnet.studio/?gh=AndreaSobiesiak/Book-Now" class="book-now-button">Book Now</a>
+    <a href="https://andreasobiesiak.github.io/Book-Now/" class="book-now-button">Book Now</a>
 <br> 
   </div>
  
@@ -340,7 +340,7 @@ pawsandplay@gmail.com.
   <div class="horizontal-line"></div>
  
    <div class="button4-container">
-    <a href="https://netnet.studio/?gh=AndreaSobiesiak/Practice" class="book-now-button">Lookbook</a>
+    <a href="https://andreasobiesiak.github.io/Look-Book/" class="book-now-button">Lookbook</a>
   </div>
 
   <img src="footer3.jpg" alt="Footer with phone number, address, socials, and email.">
