--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
   <nav>
     <a href="https://andreasobiesiak.github.io/Practice/">Home</a>
-    <a href="https://netnet.studio/?gh=AndreaSobiesiak/About-Us">Services</a>
+    <a href="https://andreasobiesiak.github.io/About-Us/">Services</a>
     <a href="https://andreasobiesiak.github.io/Look-Book/">Lookbook</a>
     <a href="https://andreasobiesiak.github.io/Book-Now/">Book Now</a> 
   </nav>
