--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     display: flex;
     justify-content: center;  
     align-items: center;      
-    background-image: url(pupbreak.jpg);
+    background-image: url(dogbreak.jpg);
     background-size: cover;   
     background-position: center;
     width: 55.7%;              
@@ -143,7 +143,7 @@
     display: flex;
     justify-content: center;  
     align-items: center;      
-    background-image: url(halfday.jpg);
+    background-image: url(fullday.jpg);
     background-size: cover;   
     background-position: center;
     width: 55.7%;              
@@ -155,7 +155,7 @@
     display: flex;
     justify-content: center;  
     align-items: center;      
-    background-image: url(fullday.jpg);
+    background-image: url(halfday.jpg);
     background-size: cover;   
     background-position: center;
     width: 55.7%;              
@@ -168,7 +168,7 @@
     display: flex;
     justify-content: center;  
     align-items: center;      
-    background-image: url(daycarebackground.jpg);
+    background-image: url(lookbookbackground.jpg);
     background-size: cover;   
     background-position: center;
        
@@ -182,7 +182,7 @@
     display: flex;
     justify-content: center;  
     align-items: center;      
-    background-image: url(lookbook.jpg );
+    background-image: url(daycarecard.jpg );
     background-size: cover;   
     background-position: center;
     width: 100%;              
@@ -254,7 +254,7 @@
 Daycare must be booked in advance, there are no drop-ins allowed. 
   </h3>
   <div class="container">
-    <h2>Puppy Break</h2>
+    <h2>Dog Break</h2>
 
     <div class="flex-container">
       <h3>Duration:</h3>
@@ -262,7 +262,7 @@ Daycare must be booked in advance, there are no drop-ins allowed.
     </div>
 
     <h3>Description:</h3>
-    <p>A Puppy Break was created for those who need <br> just a couple of hours to run an errand.</p>
+    <p>A dog Break was created for those who need <br> just a couple of hours to run an errand.</p>
 
     
     <div class="flex-container">
