--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         font-family: "Pacifico", sans-serif;
         color: #3c55a5;
         font-size: 40pt;
-        text-align: Center
+        text-align: center
       }
 
       h2 {
@@ -271,10 +271,10 @@ Daycare must be booked in advance, there are no drop-ins allowed.
     </div>
     
   </div>
-    <div class="button-container">
+   
     <div class="button-container">
     <a href="https://andreasobiesiak.github.io/Book-Now/" class="book-now-button">Book Now</a>
-</div>
+
   </div>
  
   
@@ -299,10 +299,9 @@ times, <br> whatever works for you! <br></p>
     </div>
     
   </div>
-    <div class="button2-container">
+  
     <div class="button2-container">
     <a href="https://andreasobiesiak.github.io/Book-Now/" class="book-now-button">Book Now</a>
-</div>
   </div>
   
   
